<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/rl_comment_title"
        layout="@layout/comment_title_view" />

    <include layout="@layout/view_deliver_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_comment_title"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_city_select"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tv_city"
                    style="@style/evaluate_text2_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/arrow_right_icon"
                    android:text="深圳" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_house_pic"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/house_pic" />

                <com.jiutong.meipengdai.views.SwitchView
                    android:layout_width="@dimen/x80"
                    android:layout_height="@dimen/y160"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/shape_dotted_line"
                    android:gravity="center"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/scan_icon"
                        android:text="@string/scan_house_pic" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_gray_round_corner"
                    android:gravity="center">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="请输入房产证号"
                        android:textColorHint="#808080"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/village" />

                <TextView
                    style="@style/evaluate_text2_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/arrow_right_icon"
                    android:text="@string/village_desc" />
            </RelativeLayout>

            <include layout="@layout/view_deliver_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area" />


                <TextView
                    android:id="@+id/tv_unit"
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="平方米" />

                <TextView
                    style="@style/evaluate_text2_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/tv_unit"
                    android:text="@string/area_desc" />

            </RelativeLayout>

            <include layout="@layout/view_deliver_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orientation" />

                <TextView
                    style="@style/evaluate_text2_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/arrow_right_icon"
                    android:text="@string/orientation_desc" />
            </RelativeLayout>

            <include layout="@layout/view_deliver_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    style="@style/evaluate_text_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floor" />

                <TextView
                    style="@style/evaluate_text2_sytle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/arrow_right_icon"
                    android:text="@string/where_floor_desc" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/arrow_dow_icon"
                android:text="@string/keep_fill"
                android:textColor="#999999"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/main_orange_round_button_sytle"
                android:layout_width="290dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
