<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.jiutong.meipengdai.ui.fragments.LoanFragment">
    <ImageView
        android:id="@+id/iv_ads"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y384"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/banner" />

    <ImageView
        android:layout_width="@dimen/x38"
        android:layout_height="@dimen/x38"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/x30"
        android:layout_marginTop="@dimen/y78"
        android:background="@mipmap/msg_icon" />

    <ImageView
        android:id="@+id/iv_main_center"
        android:layout_width="@dimen/x438"
        android:layout_below="@id/iv_ads"
        android:layout_marginTop="@dimen/y106"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/main_center_bg"
        android:layout_height="@dimen/y324" />

    <LinearLayout
        android:id="@+id/ll_apply"
        android:layout_below="@id/iv_main_center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/y106"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/loan_desc"
            android:textSize="12sp"
            android:text="@string/loan_desc"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_apply_loan"
            android:layout_width="@dimen/x500"
            style="@style/main_orange_round_button_sytle"
            android:layout_height="@dimen/y110"
            android:layout_below="@+id/ll_money_desc"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/pinggu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gujia_area"
        android:layout_below="@+id/ll_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y100"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/take_photo_icon" />

        <TextView
            android:id="@+id/tv_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/house_take_photo"
            android:textColor="@color/main_text_selected" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:background="@color/cut_line" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/fix_position_icon" />

        <TextView
            android:id="@+id/tv_dingwei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fix_position"
            android:textColor="@color/main_text_selected" />
    </LinearLayout>
</RelativeLayout>
